test/files/neg/t5845.check
t5845.scala:15: error: value +++ is not a member of Int
  println(5 +++ 5)
            ^
one error found
